# timbro

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PRD.md  README.md
.github/workflows/: build.yml  release.yml
cmake/: GenerateVersion.cmake
docs/: index.html
resources/icon/: Timbro.icns
resources/profiles/: clean.nam  crunch.nam  drive.nam  lead.nam  warm.nam
scripts/: generate_icon.py
src/: IRLoader.cpp  IRLoader.h  NAMEngine.cpp  NAMEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ZoneBlender.cpp  ZoneBlender.h
tools/: test_dial.cpp
tools/render/: compose_panel.py  preview_mockup.py  render_knob.py  render_panel.py  render_switch.py  stitch_knob.py  stitch_switch.py
